--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Workout Progress Tracker</title>
+    <meta name="viewport" content="user-scalable=no">
+    <title>HomeGym Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/icons/favicon-180x180.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/favicon-180x180.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
