bugfixes, code improvement

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./icons/favicon-16x16.png">
     <link rel="manifest" href="manifest.json">
+    <script src="Storage.js"></script>
+    <script src="DataManagement.js"></script>
+    <script src="UI.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -25,7 +29,6 @@
         <div id="records">
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 
 </html>
